force-app/main/default/objects/PurchaseOpportunity__c/fields/ComplaintsBurdenCost__c.field-meta.xml
<CustomField>
    <fullName>ComplaintsBurdenCost__c</fullName>
    <description>販売営業が入力する</description>
    <label>クレーム負担費用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>