force-app/main/default/objects/PurchaseOpportunity__c/fields/ComplaintsDetails__c.field-meta.xml
<CustomField>
    <fullName>ComplaintsDetails__c</fullName>
    <description>販売営業が入力する</description>
    <label>クレーム詳細</label>
    <type>TextArea</type>
</CustomField>