force-app/main/default/objects/PurchaseOpportunity__c/fields/ComplaintsDivision__c.field-meta.xml
<CustomField>
    <fullName>ComplaintsDivision__c</fullName>
    <description>販売営業が入力する</description>
    <label>クレーム区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自責（営業数字扱い）</fullName>
            </value>
            <value>
                <fullName>他責（経費扱い）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>