force-app/main/default/objects/PurchaseOpportunity__c/fields/ComplaintsFirstReport__c.field-meta.xml
<CustomField>
    <fullName>ComplaintsFirstReport__c</fullName>
    <description>販売営業が入力する</description>
    <label>クレーム第一報</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>会員</fullName>
            </value>
            <value>
                <fullName>仕入担当</fullName>
            </value>
            <value>
                <fullName>車輌管理センター</fullName>
            </value>
            <value>
                <fullName>物流</fullName>
            </value>
            <value>
                <fullName>他社AA</fullName>
            </value>
            <value>
                <fullName>EU（エンドユーザー）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>