force-app/main/default/objects/PurchaseOpportunity__c/fields/ComplaintsMemberName__c.field-meta.xml
<CustomField>
    <fullName>ComplaintsMemberName__c</fullName>
    <description>販売営業が入力する</description>
    <label>クレーム会員名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>