force-app/main/default/objects/PurchaseOpportunity__c/fields/ComplaintsReceptionDate__c.field-meta.xml
<CustomField>
    <fullName>ComplaintsReceptionDate__c</fullName>
    <description>販売営業が入力する</description>
    <label>クレーム受付日</label>
    <type>Date</type>
</CustomField>