force-app/main/default/objects/PurchaseOpportunity__c/fields/ComplaintsResponsibility_Manager__c.field-meta.xml
<CustomField>
    <fullName>ComplaintsResponsibility_Manager__c</fullName>
    <description>販売営業が入力する</description>
    <label>クレーム責任の担当者</label>
    <length>50</length>
    <type>Text</type>
</CustomField>