force-app/main/default/objects/PurchaseOpportunity__c/fields/CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>CompletionDate__c</fullName>
    <inlineHelpText>未入力でフェーズが全完了の時、当日が自動的にセットされます。</inlineHelpText>
    <label>全完了日</label>
    <type>Date</type>
</CustomField>