force-app/main/default/objects/PurchaseOpportunity__c/fields/CompletionDateInventoryResponse__c.field-meta.xml
<CustomField>
    <fullName>CompletionDateInventoryResponse__c</fullName>
    <description>佐野
在庫管理用</description>
    <label>在庫対応完了予定日</label>
    <type>Date</type>
</CustomField>