force-app/main/default/objects/PurchaseOpportunity__c/fields/Conclusion_date__c.field-meta.xml
<CustomField>
    <fullName>Conclusion_date__c</fullName>
    <description>山本</description>
    <formula>SalesManagement__r.Conclusion_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売契・注文書の確認日</label>
    <type>Date</type>
</CustomField>