force-app/main/default/objects/PurchaseOpportunity__c/fields/Consultation_content__c.field-meta.xml
<CustomField>
    <fullName>Consultation_content__c</fullName>
    <description>物件相談ボタン内で表示、相談内容を入力する</description>
    <label>相談内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>