force-app/main/default/objects/PurchaseOpportunity__c/fields/Consultation_group__c.field-meta.xml
<CustomField>
    <fullName>Consultation_group__c</fullName>
    <description>物件相談ボタン内で表示、案件の金額提示や売り予想の相談をする際に、ここで相談先を選択する</description>
    <inlineHelpText>トラック物件相談グループ （トラック全般の相談）
プライシング（中古車の相談）
事故車物件相談グループ （事故車の相談）
タイ＆マレーシア相談グループ(タイかマレーシア向け車両の相談)

2つ以上のグループをメンションしたい場合はお手数ですが、保存後にコメントにてメンションください。</inlineHelpText>
    <label>相談先グループ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>トラック物件相談グループ</fullName>
            </value>
            <value>
                <fullName>リユース案件営業A車両商談グループ</fullName>
                <label>プライシング</label>
            </value>
            <value>
                <fullName>事故車物件相談グループ</fullName>
            </value>
            <value>
                <fullName>マレーシア＆タイ物件相談グループ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>