force-app/main/default/objects/PurchaseOpportunity__c/fields/ContactDateTime__c.field-meta.xml
<CustomField>
    <fullName>ContactDateTime__c</fullName>
    <description>買取受付から買取商談を作成した際に入力される。営業A案件の場合は営業が入力する</description>
    <label>接触日時</label>
    <type>DateTime</type>
</CustomField>