force-app/main/default/objects/PurchaseOpportunity__c/fields/Contract_Existence__c.field-meta.xml
<CustomField>
    <fullName>Contract_Existence__c</fullName>
    <description>法務課がチェック用に使用</description>
    <label>売契自賠有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
            <value>
                <fullName>未記入</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>