force-app/main/default/objects/PurchaseOpportunity__c/fields/ContractCompany__c.field-meta.xml
<CustomField>
    <fullName>ContractCompany__c</fullName>
    <description>山本</description>
    <label>取引先名（甲）</label>
    <length>100</length>
    <type>Text</type>
</CustomField>