force-app/main/default/objects/PurchaseOpportunity__c/fields/CorporationID__c.field-meta.xml
<CustomField>
    <fullName>CorporationID__c</fullName>
    <description>法人管理システムと連携するための連携項目、入力されているのはロット番号</description>
    <externalId>true</externalId>
    <inlineHelpText>法人のみ使用。基幹から読み込むためのＩＤ。</inlineHelpText>
    <label>法人ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>