force-app/main/default/objects/PurchaseOpportunity__c/fields/CountriesPlanned__c.field-meta.xml
<CustomField>
    <fullName>CountriesPlanned__c</fullName>
    <description>海外販売で使用</description>
    <label>販売予定国</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ウガンダ</fullName>
            </value>
            <value>
                <fullName>オーストラリア</fullName>
            </value>
            <value>
                <fullName>ケニア</fullName>
            </value>
            <value>
                <fullName>コンゴ民主共和国</fullName>
            </value>
            <value>
                <fullName>ザンビア</fullName>
            </value>
            <value>
                <fullName>スリランカ</fullName>
            </value>
            <value>
                <fullName>タイ</fullName>
            </value>
            <value>
                <fullName>台湾</fullName>
            </value>
            <value>
                <fullName>タンザニア</fullName>
            </value>
            <value>
                <fullName>パキスタン</fullName>
            </value>
            <value>
                <fullName>フィリピン</fullName>
            </value>
            <value>
                <fullName>マラウィ</fullName>
            </value>
            <value>
                <fullName>マレーシア</fullName>
            </value>
            <value>
                <fullName>ロシア</fullName>
            </value>
            <value>
                <fullName>オランダ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>