force-app/main/default/objects/PurchaseOpportunity__c/fields/Created_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Created_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>査定表から作成済み</label>
    <type>Checkbox</type>
</CustomField>