force-app/main/default/objects/PurchaseOpportunity__c/fields/CreatedDate_is_in6months__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate_is_in6months__c</fullName>
    <description>Marketoで使用</description>
    <formula>( TODAY() - DATEVALUE( CreatedDate ) ) &lt; 180 = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>作成日が半年以内</label>
    <type>Checkbox</type>
</CustomField>