force-app/main/default/objects/PurchaseOpportunity__c/fields/CreatedMonth__c.field-meta.xml
<CustomField>
    <fullName>CreatedMonth__c</fullName>
    <description>買取商談の作成された月を表示
ダッシュボード等で使用。作成山本</description>
    <formula>MONTH( DATEVALUE( CreatedDate ) )</formula>
    <label>買取商談作成月</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>