force-app/main/default/objects/PurchaseOpportunity__c/fields/CreatedTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedTime__c</fullName>
    <description>買取商談が作成された日時を表示</description>
    <formula>CreatedDate</formula>
    <label>作成日時</label>
    <type>DateTime</type>
</CustomField>