force-app/main/default/objects/PurchaseOpportunity__c/fields/Data_input_person__c.field-meta.xml
<CustomField>
    <fullName>Data_input_person__c</fullName>
    <description>販サポが使用</description>
    <label>データ入力者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>興梠朝日</fullName>
            </value>
            <value>
                <fullName>中川理恵</fullName>
            </value>
            <value>
                <fullName>髙須こはる</fullName>
            </value>
            <value>
                <fullName>河野亜也グレン</fullName>
            </value>
            <value>
                <fullName>鹿島栞</fullName>
            </value>
            <value>
                <fullName>東條遥</fullName>
            </value>
            <value>
                <fullName>姫川樹那</fullName>
            </value>
            <value>
                <fullName>伊勢和紗</fullName>
            </value>
            <value>
                <fullName>山本加奈</fullName>
            </value>
            <value>
                <fullName>山口友美</fullName>
            </value>
            <value>
                <fullName>長野年江</fullName>
            </value>
            <value>
                <fullName>田口美沙</fullName>
            </value>
            <value>
                <fullName>山田琉稀</fullName>
            </value>
            <value>
                <fullName>鬼塚春華</fullName>
            </value>
            <value>
                <fullName>藤原愛里</fullName>
            </value>
            <value>
                <fullName>山口沙緒里</fullName>
            </value>
            <value>
                <fullName>中川陽子</fullName>
            </value>
            <value>
                <fullName>羽賀紗稀乃</fullName>
            </value>
            <value>
                <fullName>小川日菜</fullName>
            </value>
            <value>
                <fullName>黒瀬眞理子</fullName>
            </value>
            <value>
                <fullName>三馬沙岐</fullName>
            </value>
            <value>
                <fullName>西口惠里加</fullName>
            </value>
            <value>
                <fullName>川田真弓</fullName>
            </value>
            <value>
                <fullName>清水紗理</fullName>
            </value>
            <value>
                <fullName>長崎営業所</fullName>
            </value>
            <value>
                <fullName>データ取得者</fullName>
            </value>
            <value>
                <fullName>仕入営業</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>代市祥子</fullName>
                <isActive>false</isActive>
                <label>代市祥子</label>
            </value>
            <value>
                <fullName>伊東夢彩</fullName>
                <isActive>false</isActive>
                <label>伊東夢彩</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>