force-app/main/default/objects/PurchaseOpportunity__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>TODAY() - PurchaseDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>買取日からの経過日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>