force-app/main/default/objects/PurchaseOpportunity__c/fields/Date_input_date__c.field-meta.xml
<CustomField>
    <fullName>Date_input_date__c</fullName>
    <description>販サポが使用</description>
    <label>データ入力日</label>
    <type>Date</type>
</CustomField>