force-app/main/default/objects/PurchaseOpportunity__c/fields/DateCount__c.field-meta.xml
<CustomField>
    <fullName>DateCount__c</fullName>
    <description>査定日から買取日までの差分を表示</description>
    <formula>PurchaseDate__c  -  AssessmentDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>所要日数(査定→買取)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>