force-app/main/default/objects/PurchaseOpportunity__c/fields/Dayoff_Setup__c.field-meta.xml
<CustomField>
    <fullName>Dayoff_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>山本</description>
    <inlineHelpText>高粗利車両且つ土日に日程確定しないといけない至急引取案件の場合はチェックをつけてください。リユース事業と物流をメンションしてChatterが送られます。</inlineHelpText>
    <label>リユース事業部に指示書作成を依頼する（休日至急）</label>
    <type>Checkbox</type>
</CustomField>