force-app/main/default/objects/PurchaseOpportunity__c/fields/Deficit_Detail__c.field-meta.xml
<CustomField>
    <fullName>Deficit_Detail__c</fullName>
    <description>赤字になった場合に詳細と対応を入力する</description>
    <inlineHelpText>赤字発生の詳細とその後の対処方法を記載。
マネージャー決裁の場合は、決裁者の名前とその他理由があれば記載してください。</inlineHelpText>
    <label>赤字詳細・対応</label>
    <type>TextArea</type>
</CustomField>