force-app/main/default/objects/PurchaseOpportunity__c/fields/Deficit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deficit_Reason__c</fullName>
    <description>赤字になった場合に理由を入力する</description>
    <inlineHelpText>赤字の理由に最も該当するものを選択。</inlineHelpText>
    <label>赤字理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>査定ミス</fullName>
            </value>
            <value>
                <fullName>相場間違い</fullName>
            </value>
            <value>
                <fullName>相場変動</fullName>
            </value>
            <value>
                <fullName>在庫長期化</fullName>
            </value>
            <value>
                <fullName>最低保証金額</fullName>
            </value>
            <value>
                <fullName>マネージャー決裁</fullName>
            </value>
            <value>
                <fullName>自賠・重量税等立替え</fullName>
            </value>
            <value>
                <fullName>データ査定（点数・状態相違）</fullName>
            </value>
            <value>
                <fullName>引取後状態相違</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>マネージャー承認</fullName>
                <isActive>false</isActive>
                <label>マネージャー承認</label>
            </value>
            <value>
                <fullName>他社かぶせ</fullName>
                <isActive>false</isActive>
                <label>他社かぶせ</label>
            </value>
            <value>
                <fullName>商談ミス</fullName>
                <isActive>false</isActive>
                <label>商談ミス</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>