force-app/main/default/objects/PurchaseOpportunity__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <description>回送依頼で使用、物流からの返答で入力した日付が入る</description>
    <label>納車日</label>
    <type>Date</type>
</CustomField>