force-app/main/default/objects/PurchaseOpportunity__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>買取実績の部署を表示、買取実績が紐づかないと表示されない</description>
    <formula>IF( ISPICKVAL( PurchaseExperience__r.Department__c,&quot;&quot; ),
Opportunity_Department__c ,
TEXT(PurchaseExperience__r.Department__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>部署</label>
    <type>Text</type>
</CustomField>