force-app/main/default/objects/PurchaseOpportunity__c/fields/Desired_time__c.field-meta.xml
<CustomField>
    <fullName>Desired_time__c</fullName>
    <description>回送依頼作成画面で使用、主に他社オクから搬出する際の時間帯を指定する。AM、PM、なし</description>
    <label>搬出希望時間</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>