force-app/main/default/objects/PurchaseOpportunity__c/fields/Destination_classification__c.field-meta.xml
<CustomField>
    <fullName>Destination_classification__c</fullName>
    <description>旧トラック事業部で使用していた、現在は使用していない</description>
    <label>行先区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自社オークション</fullName>
            </value>
            <value>
                <fullName>他社オークション</fullName>
            </value>
            <value>
                <fullName>修理</fullName>
            </value>
            <value>
                <fullName>提携（B）</fullName>
            </value>
            <value>
                <fullName>提携（C）</fullName>
            </value>
            <value>
                <fullName>輸出</fullName>
            </value>
            <value>
                <fullName>小売り</fullName>
            </value>
            <value>
                <fullName>自社解体</fullName>
            </value>
            <value>
                <fullName>先売り</fullName>
                <isActive>false</isActive>
                <label>先売り</label>
            </value>
            <value>
                <fullName>先振り込み承認</fullName>
                <isActive>false</isActive>
                <label>先振り込み承認</label>
            </value>
            <value>
                <fullName>提携（Bなし）</fullName>
                <isActive>false</isActive>
                <label>提携（Bなし）</label>
            </value>
            <value>
                <fullName>直解体</fullName>
                <isActive>false</isActive>
                <label>直解体</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>