force-app/main/default/objects/PurchaseOpportunity__c/fields/Difference__c.field-meta.xml
<CustomField>
    <fullName>Difference__c</fullName>
    <description>販売業務課が使用</description>
    <label>相違項目</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>グレード相違</fullName>
            </value>
            <value>
                <fullName>損害情報相違</fullName>
            </value>
            <value>
                <fullName>車検証情報相違</fullName>
            </value>
            <value>
                <fullName>走行距離相違</fullName>
            </value>
            <value>
                <fullName>画像データ確認漏れ</fullName>
            </value>
            <value>
                <fullName>ロット番号相違</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>