force-app/main/default/objects/PurchaseOpportunity__c/fields/Directions__c.field-meta.xml
<CustomField>
    <fullName>Directions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>指示書作成</label>
    <type>Checkbox</type>
</CustomField>