force-app/main/default/objects/PurchaseOpportunity__c/fields/dis_volume__c.field-meta.xml
<CustomField>
    <fullName>dis_volume__c</fullName>
    <label>排気量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>