force-app/main/default/objects/PurchaseOpportunity__c/fields/Division_amount__c.field-meta.xml
<CustomField>
    <fullName>Division_amount__c</fullName>
    <description>喜多</description>
    <label>折半金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>