force-app/main/default/objects/PurchaseOpportunity__c/fields/Division_comment__c.field-meta.xml
<CustomField>
    <fullName>Division_comment__c</fullName>
    <description>喜多</description>
    <label>折半指示</label>
    <type>TextArea</type>
</CustomField>