force-app/main/default/objects/PurchaseOpportunity__c/fields/Division_to__c.field-meta.xml
<CustomField>
    <fullName>Division_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>喜多</description>
    <inlineHelpText>2人以上に折半の場合でも1人を入力してください。</inlineHelpText>
    <label>折半先</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PurchaseOpportunity_Division_to</relationshipName>
    <type>Lookup</type>
</CustomField>