force-app/main/default/objects/PurchaseOpportunity__c/fields/DocMgmt_inquirydetail__c.field-meta.xml
<CustomField>
    <fullName>DocMgmt_inquirydetail__c</fullName>
    <description>書類管理→営業への問い合わせに使用</description>
    <label>書類管理備考</label>
    <type>TextArea</type>
</CustomField>