force-app/main/default/objects/PurchaseOpportunity__c/fields/DocMgmt_Person__c.field-meta.xml
<CustomField>
    <fullName>DocMgmt_Person__c</fullName>
    <description>書類管理→営業への問い合わせで使用、書類管理の担当者を選択する</description>
    <label>担当者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>池田</fullName>
            </value>
            <value>
                <fullName>柏木</fullName>
            </value>
            <value>
                <fullName>阿部</fullName>
            </value>
            <value>
                <fullName>前嶋</fullName>
            </value>
            <value>
                <fullName>髙汐</fullName>
            </value>
            <value>
                <fullName>庭野</fullName>
            </value>
            <value>
                <fullName>山内</fullName>
            </value>
            <value>
                <fullName>山口</fullName>
            </value>
            <value>
                <fullName>小谷</fullName>
            </value>
            <value>
                <fullName>川瀬</fullName>
            </value>
            <value>
                <fullName>永井</fullName>
            </value>
            <value>
                <fullName>若山</fullName>
            </value>
            <value>
                <fullName>西秦</fullName>
            </value>
            <value>
                <fullName>井奥</fullName>
                <isActive>false</isActive>
                <label>井奥</label>
            </value>
            <value>
                <fullName>佐藤</fullName>
                <isActive>false</isActive>
                <label>佐藤</label>
            </value>
            <value>
                <fullName>北村</fullName>
                <isActive>false</isActive>
                <label>北村</label>
            </value>
            <value>
                <fullName>坂本</fullName>
                <isActive>false</isActive>
                <label>坂本</label>
            </value>
            <value>
                <fullName>大野</fullName>
                <isActive>false</isActive>
                <label>大野</label>
            </value>
            <value>
                <fullName>奥田</fullName>
                <isActive>false</isActive>
                <label>奥田</label>
            </value>
            <value>
                <fullName>岩多</fullName>
                <isActive>false</isActive>
                <label>岩多</label>
            </value>
            <value>
                <fullName>才尾</fullName>
                <isActive>false</isActive>
                <label>才尾</label>
            </value>
            <value>
                <fullName>日野</fullName>
                <isActive>false</isActive>
                <label>日野</label>
            </value>
            <value>
                <fullName>松宮</fullName>
                <isActive>false</isActive>
                <label>松宮</label>
            </value>
            <value>
                <fullName>林</fullName>
                <isActive>false</isActive>
                <label>林</label>
            </value>
            <value>
                <fullName>泉</fullName>
                <isActive>false</isActive>
                <label>泉</label>
            </value>
            <value>
                <fullName>田中</fullName>
                <isActive>false</isActive>
                <label>田中</label>
            </value>
            <value>
                <fullName>福元</fullName>
                <isActive>false</isActive>
                <label>福元</label>
            </value>
            <value>
                <fullName>福本</fullName>
                <isActive>false</isActive>
                <label>福本</label>
            </value>
            <value>
                <fullName>竹村</fullName>
                <isActive>false</isActive>
                <label>竹村</label>
            </value>
            <value>
                <fullName>米村</fullName>
                <isActive>false</isActive>
                <label>米村</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>