force-app/main/default/objects/PurchaseOpportunity__c/fields/DocMgmt_Phase__c.field-meta.xml
<CustomField>
    <fullName>DocMgmt_Phase__c</fullName>
    <description>中販名変案件の進捗管理のために書類管理が使用</description>
    <label>中販名変フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>中販名変中</fullName>
            </value>
            <value>
                <fullName>ナンバー発送待ち</fullName>
            </value>
            <value>
                <fullName>ナンバー発送済み</fullName>
            </value>
            <value>
                <fullName>キャンセル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>