force-app/main/default/objects/PurchaseOpportunity__c/fields/DocMgmtInquiry_Category__c.field-meta.xml
<CustomField>
    <fullName>DocMgmtInquiry_Category__c</fullName>
    <description>過去に書類管理依頼から営業で問い合わせを送りたい場合に使用していた、現在は使用していない</description>
    <label>依頼カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>書類不備</fullName>
            </value>
            <value>
                <fullName>売買契約書回収確認</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>