force-app/main/default/objects/PurchaseOpportunity__c/fields/document_ok_change_approved__c.field-meta.xml
<CustomField>
    <fullName>document_ok_change_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>【本部長承認要】計上月変更依頼に使用</description>
    <label>【本部長承認要】計上月変更依頼承認済み</label>
    <type>Checkbox</type>
</CustomField>