force-app/main/default/objects/PurchaseOpportunity__c/fields/Document_status__c.field-meta.xml
<CustomField>
    <fullName>Document_status__c</fullName>
    <formula>TEXT( SalesManagement__r.Document_status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>書類ステータス</label>
    <type>Text</type>
</CustomField>