force-app/main/default/objects/PurchaseOpportunity__c/fields/DocumentOK__c.field-meta.xml
<CustomField>
    <fullName>DocumentOK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>現在の書類OK日を使用する前に使っていた書類OKチェック項目→削除予定</description>
    <label>削除予定_本社書類OK</label>
    <type>Checkbox</type>
</CustomField>