force-app/main/default/objects/PurchaseOpportunity__c/fields/DocumentOKCheck__c.field-meta.xml
<CustomField>
    <fullName>DocumentOKCheck__c</fullName>
    <inlineHelpText>原則、OBIC確認台帳の書類OK日を連携。先行陸運書類作成に日付が入っている場合、その日付が優先して反映。</inlineHelpText>
    <label>書類OK日（到着日）</label>
    <type>Date</type>
</CustomField>