force-app/main/default/objects/PurchaseOpportunity__c/fields/eGift_Sent__c.field-meta.xml
<CustomField>
    <fullName>eGift_Sent__c</fullName>
    <description>弁護士会など、紹介をもらった際に紹介元にeギフトを送信する場合は入力</description>
    <label>eギフト送信</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>