force-app/main/default/objects/PurchaseOpportunity__c/fields/Electronic_contract_URL__c.field-meta.xml
<CustomField>
    <fullName>Electronic_contract_URL__c</fullName>
    <label>電子売契URL</label>
    <type>Url</type>
</CustomField>