force-app/main/default/objects/PurchaseOpportunity__c/fields/engine_form__c.field-meta.xml
<CustomField>
    <fullName>engine_form__c</fullName>
    <description>車検証情報入力タブで表示</description>
    <label>エンジン型式</label>
    <length>255</length>
    <type>Text</type>
</CustomField>