force-app/main/default/objects/PurchaseOpportunity__c/fields/Estimate_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Assessment__c</fullName>
    <description>長谷川</description>
    <label>査定課売り予想</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>